vbnc/vbnc/vbnc/tests/Errors/30179-3.vb
Class C
    Class A
    End Class
    Class a
    End Class
End Class
